--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: By Jory Smith</title>
+    <title>Bank Loan Calculator: By Jory Smith</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -29,7 +29,7 @@
         <div class="container-fluid col-xxl-10">
             <div class="d-flex align-items-center">
                 <a class="navbar-brand mx-1" href="index.html"><span class="brandFont fs-3">JS</span></a>
-                <a class="navbar-brand mx-1" href="index.html">&nbsp; APP NAME</a>
+                <a class="navbar-brand mx-1" href="index.html">&nbsp; Bank Loan Calculator</a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
                         <a class="nav-link mx-1" href="code.html">App Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-1" target="_blank" href="#">GitHub Repo</a>
+                        <a class="nav-link mx-1" target="_blank" href="https://github.com/JorySmith/BankLoanCalculator">GitHub Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-1" target="_blank" href="https://www.joryiansmith.dev/">My Portfolio</a>
@@ -62,7 +62,7 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 pt-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">Lucky Number Even: A Coding Project</h1>
+                    <h1 class="display-5 fw-bold lh-1 mb-3">Bank Loan Calculator: A Coding Project</h1>
                     <h4 class="lead">A JavaScript coding exercise using loops, functions, and conditional statements.
                         This program loops through 0 to 100, displays each number, and highlights the even ones in bold
                         font weight.</h4>
@@ -92,8 +92,8 @@
                     </h5>
                 </div>
                 <div class="col">
-                    <img src="img/LuckyNumberEven.png" class="img-fluid center-block d-block mx-auto"
-                        alt="Lucky Number Even App Logo" width="500">
+                    <img src="img/BankLoanCalculator.png" class="img-fluid center-block d-block mx-auto"
+                        alt="Bank Loan Calculator App Logo" width="500">
                 </div>
             </div>
         </div>
