Completed app page initial layout

--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 pt-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
+                    <!-- App Name, Description -->
                     <h1 class="display-5 fw-bold lh-1 mb-3">Bank Loan Calculator: A Coding Project</h1>
                     <h4 class="lead">A JavaScript coding exercise using loops, functions, and conditional statements.
                         This program loops through 0 to 100, displays each number, and highlights the even ones in bold
                         font weight.</h4>
+                    <!-- JavaScript Principles Applied -->    
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript Fundamentals</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript Loops</li>
@@ -80,6 +82,7 @@
                     <div>
                         <a href="app.html" type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2">View App!</a>
                     </div>
+                    <!-- Technologies Applied -->
                     <h5 class="fw-bold mt-5">
                         <div class="d-flex">
                             <div class="row">
@@ -91,6 +94,7 @@
                         </div>
                     </h5>
                 </div>
+                <!-- App Logo -->
                 <div class="col">
                     <img src="img/BankLoanCalculator.png" class="img-fluid center-block d-block mx-auto"
                         alt="Bank Loan Calculator App Logo" width="500">
