--- a/app.html
+++ b/app.html
@@ -47,7 +47,8 @@
                         <a class="nav-link mx-1" href="code.html">App Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-1" target="_blank" href="https://github.com/JorySmith/BankLoanCalculator">GitHub Repo</a>
+                        <a class="nav-link mx-1" target="_blank"
+                            href="https://github.com/JorySmith/BankLoanCalculator">GitHub Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-1" target="_blank" href="https://www.joryiansmith.dev/">My Portfolio</a>
@@ -60,7 +61,63 @@
     <!-- Main Section -->
     <main class="flex-shrink-0">
         <div class="container mt-5">
+            <!-- App Name -->
+            <h1 class="pb-1">Bank Loan Calculator</h1>
+            <!-- First Row: User Inputs, Monthly Payment Results -->
+            <div class="row row-cols-1 row-cols-md-2 mb-2">                
+                <!-- Loan Info Form Inputs and Submit Button-->
+                <div class="col">
+                    <form class="row g-2 p-3 formBgc">
+                        <label for="loanAmount" class="fw-bold">Loan Amount</label>
+                        <input id="loanAmount" name="loanAmount" type="number" class="form-control" value="15000">
 
+                        <label for="payments" class="fw-bold">Payments</label>
+                        <input id="payments" name="payments" type="number" class="form-control" value="60">
+
+                        <label for="intRate" class="fw-bold">Interest Rate</label>
+                        <input id="intRate" name="intRate" type="number" class="form-control" value="2.75">
+
+                        <div class="d-flex justify-content-end">
+                            <button class="btn border-2 formBtn formTxt fw-bold mt-1" type="submit">Calculate</button>
+                        </div>
+                    </form>
+                </div>
+                <!-- Monthly Payments Result, Total Principal/Interest/Cost Info -->
+                <div class="col d-flex flex-column align-items-end">
+                    <p><em>Your Monthly Payments</em></p>
+                    <p id="monthlyPayments" class="monthlyPayments fw-bold">$269.53</p>
+                    <div class="col-12 d-flex justify-content-between">
+                        <div class="col-6">
+                            <p class="mb-1">Total Principal:</p>
+                            <p class="mb-1">Total Interest:</p>
+                            <p class="mb-1">Total Cost:</p>
+                        </div>
+                        <div class="col-6 d-flex flex-column align-items-end">
+                            <p class="mb-1">$15,000.00</p>
+                            <p class="mb-1">$1,171.82</p>
+                            <p class="fw-bold mb-1">$16,171.82</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Second Row: Amortization Table Results -->
+            <div class="table-responsive">
+                <table class="table table-striped table-sm">
+                    <thead class="tableHeader text-light">
+                        <tr>
+                            <th>Month</th>
+                            <th>Payment</th>
+                            <th>Principal</th>
+                            <th>Interest</th>
+                            <th>Total Interest</th>
+                            <th>Balance</th>
+                        </tr>
+                    </thead>
+                    <tbody id="resultsTable">
+                        <!-- Insert Amortization Table Results Here -->
+                    </tbody>
+                </table>
+            </div>
         </div>
     </main>
     <!-- Footer Section -->
