Updated getUserInputs function name

--- a/app.html
+++ b/app.html
@@ -154,7 +154,7 @@
     </script>
     <script src="js/site.js"></script>
     <script>
-        document.getElementById("calculateBtn").addEventListener("click", userInputs);
+        document.getElementById("calculateBtn").addEventListener("click", getUserInputs);
     </script>
 
 </body>
