Updated index JS principles applied

--- a/index.html
+++ b/index.html
@@ -69,14 +69,15 @@
                         font weight.</h4>
                     <!-- JavaScript Principles Applied -->    
                     <ul class="fa-ul pt-2 checklist">
-                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript Fundamentals</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Regular Expressions</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript Objects</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript Loops</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript Functions</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript DOM Manipulation
                         </li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript If/Then/Else
                             Conditional Statements</li>
-                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript Boolean Logic</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript Booleans</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap</li>
                     </ul>
                     <div>
