Updated code page and readme description

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                     <!-- App Name, Description -->
                     <h1 class="display-5 fw-bold lh-1 mb-3">Bank Loan Calculator: A Coding Project</h1>
                     <h4 class="lead">A JavaScript coding exercise using loops, functions, and conditional statements.
-                        This program loops through 0 to 100, displays each number, and highlights the even ones in bold
-                        font weight.</h4>
+                        This program displays an amortization table and monthly payments details for a home loan based on a user-defined total loan amount, number of payments, and annual interest rate.</h4>
                     <!-- JavaScript Principles Applied -->    
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Regular Expressions</li>
